--- a/ui-projects/qt_widgets_application/OpenFiMoUIQTWidgets/mainwindow.ui
+++ b/ui-projects/qt_widgets_application/OpenFiMoUIQTWidgets/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -34,7 +34,7 @@
       <property name="geometry">
        <rect>
         <x>40</x>
-        <y>70</y>
+        <y>110</y>
         <width>201</width>
         <height>161</height>
        </rect>
@@ -53,7 +53,7 @@
       <property name="geometry">
        <rect>
         <x>300</x>
-        <y>70</y>
+        <y>110</y>
         <width>201</width>
         <height>161</height>
        </rect>
@@ -71,8 +71,8 @@
      <widget class="QLabel" name="label_10">
       <property name="geometry">
        <rect>
-        <x>550</x>
-        <y>70</y>
+        <x>560</x>
+        <y>10</y>
         <width>201</width>
         <height>161</height>
        </rect>
@@ -91,7 +91,7 @@
       <property name="geometry">
        <rect>
         <x>240</x>
-        <y>100</y>
+        <y>140</y>
         <width>91</width>
         <height>101</height>
        </rect>
@@ -110,7 +110,7 @@
       <property name="geometry">
        <rect>
         <x>480</x>
-        <y>100</y>
+        <y>90</y>
         <width>91</width>
         <height>101</height>
        </rect>
@@ -145,13 +145,16 @@
       <property name="geometry">
        <rect>
         <x>110</x>
-        <y>250</y>
+        <y>290</y>
         <width>72</width>
         <height>29</height>
        </rect>
       </property>
+      <property name="minimum">
+       <double>-10000000.000000000000000</double>
+      </property>
       <property name="maximum">
-       <double>99999999999999.000000000000000</double>
+       <double>10000000.000000000000000</double>
       </property>
      </widget>
      <widget class="QDoubleSpinBox" name="doubleSpinBox_4">
@@ -160,14 +163,17 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>630</x>
-        <y>250</y>
+        <x>360</x>
+        <y>290</y>
         <width>72</width>
         <height>29</height>
        </rect>
       </property>
+      <property name="minimum">
+       <double>-10000000.000000000000000</double>
+      </property>
       <property name="maximum">
-       <double>99999999999999.000000000000000</double>
+       <double>10000000.000000000000000</double>
       </property>
      </widget>
      <widget class="QDoubleSpinBox" name="doubleSpinBox_5">
@@ -176,14 +182,74 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>370</x>
-        <y>250</y>
+        <x>640</x>
+        <y>170</y>
         <width>72</width>
         <height>29</height>
        </rect>
       </property>
+      <property name="minimum">
+       <double>-10000000.000000000000000</double>
+      </property>
       <property name="maximum">
-       <double>99999999999999.000000000000000</double>
+       <double>10000000.000000000000000</double>
+      </property>
+     </widget>
+     <widget class="QDoubleSpinBox" name="doubleSpinBox_6">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>630</x>
+        <y>360</y>
+        <width>72</width>
+        <height>29</height>
+       </rect>
+      </property>
+      <property name="minimum">
+       <double>-10000000.000000000000000</double>
+      </property>
+      <property name="maximum">
+       <double>10000000.000000000000000</double>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_13">
+      <property name="geometry">
+       <rect>
+        <x>560</x>
+        <y>200</y>
+        <width>201</width>
+        <height>161</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap>images/piggy.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_14">
+      <property name="geometry">
+       <rect>
+        <x>480</x>
+        <y>180</y>
+        <width>91</width>
+        <height>101</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap>images/long-arrow-right.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
       </property>
      </widget>
     </widget>
